# golrs

./: Cargo.toml  README.md
patterns/: bar.txt  blowup.txt  flower.txt  gen.ts  glider.txt  simple.txt
src/: main.rs  sim.rs  utils.rs  view.rs  world.rs
src/view/: canvas.rs
src/world/: hashed_world.rs
