[package]
name = "golrs"
version = "0.1.0"
edition = "2021"
description = "a TUI for vizualising a rust implementation of the game of life."
authors = ["Matthieu JOLIMAITRE <matthieu@imagevo.fr>"]
license = "MIT"
repository = "https://github.com/MajorBarnulf/golrs"

[dependencies]
termion = "1.5"
metrohash = "1.0"